--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Repozytorium zawiera zadania realizowane na laboratoriach PitE. W folderze /gotowe znajdują się 2 projekty realizowane na pierwszych zajęciach łącznie z poprawkami dokonanymi później. W folderze /tests znajduje się niedokończony projekt poruszający zagadnienie testowania jednostkowego. 
+Repozytorium zawiera zadania realizowane na laboratoriach PitE. W folderze /gotowe znajdują się 2 projekty realizowane na pierwszych zajęciach łącznie z poprawkami dokonanymi później. 
